--- a/phoneword/Resources/layout/activity_main.axml
+++ b/phoneword/Resources/layout/activity_main.axml
@@ -1,7 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-</RelativeLayout>
+<LinearLayout
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:app="http://schemas.android.com/apk/res-auto"
+	xmlns:tools="http://schemas.android.com/tools"
+	android:layout_width="match_parent"
+	android:layout_height="match_parent"
+android:orientation="vertical" >
+	<TextView
+		android:text="Enter a Phoneword:"
+		android:textAppearance="?android:attr/textAppearanceLarge"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:minWidth="25px"
+		android:minHeight="25px"
+		android:id="@+id/textView1" />
+	<EditText
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_toLeftOf="@id/textView1"
+		android:id="@+id/PhoneNumberText"
+		android:text="1-855-XAMARIN"
+		android:layout_toRightOf="@id/textView1" />
+	<Button
+		android:text="Translate"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:id="@+id/TranslateButton" />
+	<TextView
+		android:text=""
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:id="@+id/TranslatedPhoneword" />
+</LinearLayout>
